mdapioutput/objects/Account.object
<CustomObject>
    <fields>
        <fullName>DN_Audit_Category_1__c</fullName>
        <label>DN Audit Category 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DN_Audit_Category_2__c</fullName>
        <label>DN Audit Category 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DN_Audit_Category_3__c</fullName>
        <label>DN Audit Category 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DN__c</fullName>
        <label>DN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MatrixId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Product Matrix</label>
        <referenceTo>Matrix__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDL_Audit_Category_1__c</fullName>
        <label>PDL Audit Category 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PDL_Audit_Category_2__c</fullName>
        <label>PDL Audit Category 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PDL_Audit_Category_3__c</fullName>
        <label>PDL Audit Category 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PDL__c</fullName>
        <label>PDL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
	<fields>
        <fullName>RevenueForecast__c</fullName>
        <label>Revenue Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesPlan__c</fullName>
        <label>Sales Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
	<fields>
        <fullName>ShippingGeo__c</fullName>
        <label>ShippingGeo</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
	<fields>
        <fullName>Last_Year_Revenue_Generated__c</fullName>
        <label>Last Year Revenue Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>